Add detailed sale processing with SaleDetail support
Introduced SaleDetail entity, DTOs, and mapper to handle sale detail data. Updated SaleService to manage SaleDetails, validate stock, and calculate subtotals and total amounts. Adjusted Sale model and SaleMapper for compatibility with the new structure.